<resources>
    <string name="app_name">EnglishFlashcard</string>

    <string name="content_image_plash_screen">image splash screen</string>
    <string name="content_image_topic_item">image topic item</string>
    <string name="content_image_learn_appbar">image learn appbar</string>
    <string name="content_image_search_appbar">image search appbar</string>
    <string name="content_image_nodata">image no data</string>

    <string name="title_xin_chao">Xin Chào</string>
    <string name="title_toolbar_learn">Learn</string>
    <string name="title_toolbar_exam">Exam</string>
    <string name="title_toolbar_add">Add Dictionary</string>
    <string name="title_topics">Topics</string>
    <string name="title_flashcard_english">Flashcard English</string>
    <string name="title_learn_appbar">Learn</string>
    <string name="title_exam_appbar">Quiz</string>
    <string name="title_list_topics">List Topics</string>
    <string name="title_school">School</string>
    <string name="title_toolbar">Flashcard English</string>
    <string name="title_word">Hello</string>
    <string name="title_spelling">/asda/</string>
    <string name="title_translate">Xin Chào</string>
    <string name="title_nodata">No Data</string>
    <string name="title_button_add_topic">Add Topic</string>
    <string name="title_toolbar_list_topic">List Topics</string>
    <string name="title_add_topic">Add topic</string>
    <string name="title_name_topic">Name Topic</string>
    <string name="title_link_image_topic">Link Image</string>
    <string name="title_button_exit">Exit</string>
    <string name="title_button_add">Add</string>
    <string name="title_button_add_word">Add word</string>
    <string name="title_checkbox_prepositions">Prepositions</string>
    <string name="title_checkbox_adverbs">Adverbs</string>
    <string name="title_checkbox_adjective">Adjective</string>
    <string name="title_checkbox_verb">Verb</string>
    <string name="title_checkbox_noun">Noun</string>
    <string name="title_text_eng_type">Englisg Type</string>
    <string name="title_text_translate">Translate</string>
    <string name="title_text_spelling">Spelling</string>
    <string name="title_text_english_word">English Word</string>
    <string name="title_text_add_word">Add Word</string>
    <string name="title_toolbar_quiz">Quiz</string>

    <string name="hint_search">Search</string>

    <string name="messeage_insert_success">Insert success</string>
    <string name="messeage_insert_failed">Insert failed</string>
    <string name="messeage_english_word_not_be_empty">English Word Not Be Empty</string>
    <string name="messeage_spelling_not_be_empty">Spelling Not Be Empty</string>
    <string name="messeage_translate_not_be_empty">Translate Not Be Empty</string>
    <string name="messeage_wordtype_not_be_empty">WordType Not Be Empty</string>
    <string name="messeage_over_10">/10</string>
</resources>
