<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_150"
    android:layout_margin="@dimen/dp_10"
    android:background="@android:color/white"
    app:cardCornerRadius="@dimen/dp_20"
    app:cardElevation="@dimen/dp_10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/dp_5"
            android:text="@string/title_word"
            android:textColor="@color/colorBlue"
            android:textSize="@dimen/sp_25"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/dp_5"
            android:text="@string/title_spelling"
            android:textColor="@color/colorBlue"
            android:textSize="@dimen/sp_25"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/dp_5"
            android:text="@string/title_translate"
            android:textColor="@color/colorBlue"
            android:textSize="@dimen/sp_25"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
