<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTurquoise"
    tools:context="com.sunasterisk.englishflashcard.ui.addword.AddWordActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_text_add_word"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_40"
        android:fontFamily="@font/edwardian"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextEnglishWord"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_55"
        android:layout_marginEnd="@dimen/dp_20"
        android:background="@drawable/border_edittext"
        android:paddingStart="@dimen/dp_20"
        app:layout_constraintBottom_toTopOf="@+id/guideline14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline12"
        app:layout_constraintTop_toTopOf="@+id/guideline13"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/editTextSpelling"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_55"
        android:layout_marginEnd="@dimen/dp_20"
        android:background="@drawable/border_edittext"
        android:paddingStart="@dimen/dp_20"
        app:layout_constraintBottom_toTopOf="@+id/guideline15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline12"
        app:layout_constraintTop_toTopOf="@+id/guideline14"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/editTextTranslate"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_55"
        android:layout_marginEnd="@dimen/dp_20"
        android:background="@drawable/border_edittext"
        android:paddingStart="@dimen/dp_20"
        app:layout_constraintBottom_toTopOf="@+id/guideline16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline12"
        app:layout_constraintTop_toTopOf="@+id/guideline15"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_text_english_word"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_18"
        app:layout_constraintBottom_toTopOf="@+id/guideline14"
        app:layout_constraintEnd_toStartOf="@+id/guideline12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline13" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_text_spelling"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_18"
        app:layout_constraintBottom_toTopOf="@+id/guideline15"
        app:layout_constraintEnd_toStartOf="@+id/guideline12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline14" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_text_translate"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_18"
        app:layout_constraintBottom_toTopOf="@+id/guideline16"
        app:layout_constraintEnd_toStartOf="@+id/guideline12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline15" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_text_eng_type"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_18"
        app:layout_constraintBottom_toTopOf="@+id/guideline17"
        app:layout_constraintEnd_toStartOf="@+id/guideline12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline16" />

    <RadioButton
        android:id="@+id/radioNoun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@android:color/white"
        android:text="@string/title_checkbox_noun"
        android:textSize="@dimen/sp_18"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/guideline19"
        app:layout_constraintStart_toStartOf="@+id/guideline18"
        app:layout_constraintTop_toTopOf="@+id/guideline17" />

    <RadioButton
        android:id="@+id/radioAdjective"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@android:color/white"
        android:text="@string/title_checkbox_adjective"
        android:textSize="@dimen/sp_18"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/guideline20"
        app:layout_constraintStart_toStartOf="@+id/guideline18"
        app:layout_constraintTop_toTopOf="@+id/guideline19" />

    <RadioButton
        android:id="@+id/radioAdverbs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@android:color/white"
        android:textSize="@dimen/sp_18"
        android:text="@string/title_checkbox_adverbs"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/guideline21"
        app:layout_constraintStart_toStartOf="@+id/guideline18"
        app:layout_constraintTop_toTopOf="@+id/guideline20" />

    <RadioButton
        android:id="@+id/radioPreposition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@android:color/white"
        android:textSize="@dimen/sp_18"
        android:text="@string/title_checkbox_prepositions"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/guideline19"
        app:layout_constraintStart_toStartOf="@+id/guideline23"
        app:layout_constraintTop_toTopOf="@+id/guideline17" />

    <RadioButton
        android:id="@+id/radioVerb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_18"
        android:buttonTint="@android:color/white"
        android:text="@string/title_checkbox_verb"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/guideline20"
        app:layout_constraintStart_toStartOf="@+id/guideline23"
        app:layout_constraintTop_toTopOf="@+id/guideline19" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.63" />

    <Button
        android:id="@+id/buttonExit"
        android:layout_width="@dimen/dp_150"
        android:layout_height="@dimen/dp_55"
        android:background="@drawable/border_button_exit"
        android:text="@string/title_button_exit"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline22"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline21" />

    <Button
        android:id="@+id/buttonAddWord"
        android:layout_width="@dimen/dp_150"
        android:layout_height="@dimen/dp_55"
        android:background="@drawable/border_button_add"
        android:text="@string/title_button_add_word"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline22"
        app:layout_constraintTop_toTopOf="@+id/guideline21" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>
